# fast-mcp-telegram

./: .env.example  .gitignore  .sourcery.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  acl.dev.yaml.example  acl.yaml.example  benchmark_results_after_p0.json  benchmark_results_before.json  docker-compose.yml  glama.json  pr113-adr-review.md  pr113-review.md  pr_body.md  pyproject.toml  run_auth_tests.py  run_p4_verify.py  run_tests.sh  server.json
.cursor/memory-bank/: activeContext.md  forum-in-topic-replies.md  progress.md  progress_history.md  systemPatterns.md  techContext.md
.cursor/rules/: docs-plain-language.mdc  general.mdc  implementation-workflow.mdc  release-notes.mdc
.gategrid-ci/baselines/: main.json
.gategrid-ci/reports/: 2026-05-26T212417.8_matrix.json
.gategrid/baselines/: main.json
.gategrid/reports/: 2026-05-25T133602.7_matrix.json  2026-05-25T133603.0_matrix.json  2026-05-25T140252.3_matrix.json  2026-05-25T140656.2_matrix.json
.github/workflows/: deploy-collector.yml  deploy.yml  yank.yml
.well-known/mcp/: server-card.json
collector/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  requirements.txt
collector/app/: database.py  main.py  models.py  services.py  settings.py
collector/tests/: _helpers.py  conftest.py  test_e2e.py  test_endpoint.py  test_models.py  test_services.py
docs/: Filters-vs-Folders.md  Installation.md  MTProto-Bridge.md  Project-Structure.md  Roadmap.md  Strategic-Market-Positioning.md  Tools-Reference.md  benchmark-search.md  benchmark-spec.md  benchmark_baseline_russian.json  benchmark_c2_t10.json  benchmark_c2_t5.json  benchmark_c4_t10.json  benchmark_c4_t5.json  benchmark_c8_t10.json  benchmark_c8_t5.json  benchmark_find_chats_sweep.md  benchmark_results_baseline.json  benchmark_results_p0.json  benchmark_results_p1.json  benchmark_results_p2.json  benchmark_search_baseline.json  benchmark_search_gather_baseline.json  benchmark_search_optimized.json  benchmark_search_tuning.json  benchmark_sweep_results.md  find_baseline.json  find_c2_t10.json  find_c2_t5.json  find_c4_t10.json  find_c4_t5.json  find_c8_t10.json  find_c8_t5.json  published-resources.md  sg_sweep_comparison.md  sg_unlimited.json  sweep_c2_t10.json  sweep_c2_t5.json  sweep_c4_t10.json  sweep_c4_t5.json  (+2 more)
docs/adr/: 0001-agent-scoped-session-acl.md  0002-oidc-self-service-auth.md  0003-oidc-phase4-scope-based-auth.md  0004-qr-login-auth.md  0005-anonymous-feature-adoption-telemetry.md  0005-anonymous-tool-telemetry.md  0006-abuse-prevention-for-collection-endpoint.md  README.md  oidc-docs-analysis-report.md
scripts/: acl_mcp_smoke.sh  deploy-telemetry-collector.sh  migrate_legacy.py
src/: _version.py  cli_setup.py  server.py  telemetry.py
tests/: conftest.py  test_account_tool_prefix_middleware.py  test_attachment_warning.py  test_auth_url_token.py  test_bearer_token_determination.py  test_chat_id_resolution.py  test_contact_search_flood_wait.py  test_contacts_bot_folder.py  test_contacts_date_filtering.py  test_data_uri.py  test_fastmcp_decorator_integration.py  test_file_handling_send.py  test_file_id_passthrough.py  test_forum_topics_minimal.py  test_get_messages.py  test_json_ids.py  test_mcp_tool_acl_integration.py  test_message_format_attachment_urls.py  test_message_formatting.py  test_mtproto_api_acl.py  test_public_base_url_from_domain.py  test_qr_login.py  test_require_auth.py  test_session_acl.py  test_session_acl_counts.py  test_session_token_path_security.py  test_stdio_default_session.py  test_telemetry.py  test_thread_scope_replies_fetch.py  test_unified_session_config.py  test_web_setup.py
(+125 files in other folders)
